Update 1.0.1: Fixing bugs and added quit button

--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,12 @@
                 <h2 id="taskCreated">Task creati (in questa sessione): </h2>
                 <h2 id="taskCompleted">Task creati (in questa sessione): </h2>
                 <hr>
-                <!--<button onclick="todoManager.resetAllTasks();" class="btn"><img src="assets/_undo.png" alt="" draggable="false" width="25px" height="25px">  Resetta tutti i task.</button>-->
+                <!--<br> <br>
+                <button onclick="todoManager.resetAllTasks();" class="btn"><img src="assets/_undo.png" alt="" draggable="false" width="25px" height="25px">  Resetta tutti i task.</button>-->
                 <br> <br>
                 <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton"><img src="assets/_close.png" alt="" draggable="false" height="30px" width="30px"> Chiudi</button>
+                <br> <br>
+                <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton"><img src="assets/_quit.png" alt="" draggable="false" height="30px" width="30px"> Esci dall'app</button>
             </div>
         </div>
     </body>
