--- a/src/boot.html
+++ b/src/boot.html
@@ -11,7 +11,7 @@
     <body onload="OnLoad()">
         <center>
             <div id="loading">
-                <img src="assets/_gear.png" alt="" draggable="false" class="logo">
+                <img src="assets/_gear.png" alt="icon" draggable="false" class="logo">
                 <br> <br> <br>
                 <span class="loader"></span>
             </div>
