Fixing some depscriptions

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
-                    <label for="checkbox" style="font-size: 20px;">Attiva la chiusura automatica delle impostazioni.</label>
+                    <label for="checkbox" style="font-size: 20px;">Disattiva la chiusura automatica delle impostazioni.</label>
                     <br> <br> <br>
                     <h2>Azioni:</h2>
                     <button id="resetBtn" class="btn"><img src="assets/_undo.png" alt="" draggable="false" width="25px" height="25px">  Resetta tutti i task.</button>
