Starting developing Taskify Business, for global release

--- a/src/boot.html
+++ b/src/boot.html
@@ -4,7 +4,7 @@
         <!--SETTINGS-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Manutenzione - Caricamento</title>
+        <title>Taskify Business</title>
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/boot.css">
     </head>
