--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -14,10 +14,10 @@
             <h3 style="margin-top: -50px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members.</h3>
             <br>
             <div class="inputs">
-                <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany">
+                <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" max="30" alt="Max 30 characters">
             </div>
             <br> <br>
-            <button onclick="createCompany()">Create your company</button>
+            <button id="companyCreation">Create your company</button>
         </div>
     </body>
     <script src="js/companyCreation.js"></script>
