--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                 <p style="margin-top: -20px;" id="latestversion">Ultima versione disponibile: </p>
                 <h2 id="build">Build: build_number</h2>
                 <hr>
-                <img src="assets/_betaIcon.png" style="height: 50px;">
+                <img src="assets/_betaIcon.png" style="height: 50px;" draggable="false">
                 <h2 id="taskCreated">Task creati: </h2>
                 <h2 id="taskCompleted">Task creati: </h2>
                 <hr>
