--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -14,10 +14,11 @@
             <h3 style="margin-top: -50px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members.</h3>
             <br>
             <div class="inputs">
-                <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" max="30" alt="Max 30 characters">
+                <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Max 30 characters" spellcheck="false">
             </div>
+            <p id="warn"><img src="assets/_warn.png" alt="" width="20px" height="20px"> In your company name, put at least<b>8 characters.</b></p>
             <br> <br>
-            <button id="companyCreation">Create your company</button>
+            <button id="companyCreation"><img src="assets/_create.png" alt="" draggable="false" height="25px" width="25px"> Create</button>
         </div>
     </body>
     <script src="js/companyCreation.js"></script>
