Finish fixing bugs, updated github image

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
                 <h1 style="font-family: 'Excon', sans-serif;">SOFTWARES TO UPGRADE</h1>
                 <div class="input-group">
                     <input type="text" id="softwareInput" placeholder="Insert the Task name: ">
-                    <div class="version-inputs">
+                    <div class="version-inputs" id="software">
                         <input type="text" id="softwarePrevVersion" placeholder="Previous Version">
                         <input type="text" id="softwareNextVersion" placeholder="Newer Version">
                     </div>
                     <div class="nameTaskUser">
-                        <img src="assets/_employee.png" alt="" draggable="false" class="nameTaskUserImg">
+                        <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
                         <input type="text" id="userTypeIn" placeholder="Enter the name of an employee (optional)...">
                     </div>
                     <button id="softwareAddBtn">+ Add to Tasks</button>
@@ -30,7 +30,7 @@
                 <h1 style="font-family: 'Excon', sans-serif;">OUT OF MAINTENANCE</h1>
                 <div class="input-group">
                     <input type="text" id="fuoriInput" placeholder="Insert the Task name: ">
-                    <div class="version-inputs">
+                    <div class="version-inputs" id="out">
                         <input type="text" id="fuoriPrevVersion" placeholder="Previous Version">
                         <input type="text" id="fuoriNextVersion" placeholder="Newer Version">
                     </div>
