--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -16,9 +16,9 @@
             <div class="inputs">
                 <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Max 30 characters" spellcheck="false">
             </div>
-            <p id="warn"><img src="assets/_warn.png" alt="" width="20px" height="20px"> In your company name, put at least<b>8 characters.</b></p>
+            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px"> In your company name, put at least<b>8 characters.</b></p>
             <br> <br>
-            <button id="companyCreation"><img src="assets/_create.png" alt="" draggable="false" height="25px" width="25px"> Create</button>
+            <button id="companyCreation"><img src="assets/_create.png"  draggable="false" height="25px" width="25px"> Create</button>
         </div>
     </body>
     <script src="js/companyCreation.js"></script>
