--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                         <input type="text" id="fuoriNextVersion" placeholder="Newer Version">
                     </div>
                     <div class="nameTaskUser">
-                        <img src="assets/_employee.png" alt="" draggable="false" class="nameTaskUserImg">
+                        <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
                         <input type="text" id="userTypeOut" placeholder="Enter the name of an employee (optional)...">
                     </div>
                     <button id="fuoriAddBtn">+ Add to Tasks</button>
@@ -43,25 +43,25 @@
                 <hr style="color: grey; opacity: 0.5;">
                 <ul id="fuoriList"></ul>
             </div>
-            <button onclick="openInfoBox()" class="infoButton" id="ibtn"><img src="assets/_info.png" alt="" draggable="false" height="30px" width="30px"></button>
-            <button onclick="openSettings()" class="settingsButton" id="sbtn"><img src="assets/_settings.png" alt="" draggable="false" height="30px" width="30px"></button>
+            <button onclick="openInfoBox()" class="infoButton" id="ibtn"><img src="assets/_info.png" draggable="false" height="30px" width="30px"></button>
+            <button onclick="openSettings()" class="settingsButton" id="sbtn"><img src="assets/_settings.png" draggable="false" height="30px" width="30px"></button>
         </div>
         <br> 
         <div class="info" id="infoBox">
-            <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_info.png" alt="" draggable="false" height="35px" width="35px"> Informations:</h1>
+            <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_info.png" draggable="false" height="35px" width="35px"> Informations:</h1>
             <div class="content" style="margin-top: -35px;">
-                <h2 id="version">Versione: 1.x.x</h2>
-                <p style="margin-top: -20px;" id="latestversion">Ultima versione disponibile: </p>
-                <h2 id="build">Build: build_number</h2>
+                <h2 id="version">Version:</h2>
+                <p style="margin-top: -20px;" id="latestversion">Latest version avaible: </p>
+                <h2 id="build">Build:</h2>
                 <hr>
-                <h1 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_chart.png" alt="" draggable="false" width="20px" height="20px"> Charts:</h1>
-                <h2><img src="assets/_createTask.png" alt="" draggable="false" height="20px" width="20px">  Task created: <p style="display: inline;"id="taskCreated"></p></h2>
-                <h2><img src="assets/_completeIcon.png" draggable="false" alt="" height="20px" width="20px">  Task completed: <p style="display: inline;" id="taskCompleted"></p></h2>
+                <h1 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_chart.png" draggable="false" width="20px" height="20px"> Charts:</h1>
+                <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Task created: <p style="display: inline;"id="taskCreated"></p></h2>
+                <h2><img src="assets/_completeIcon.png" draggable="false" height="20px" width="20px">  Task completed: <p style="display: inline;" id="taskCompleted"></p></h2>
                 <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px" id="settings"> Settings:</h1>
                 <div class="settings">
-                    <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_general.png" alt="" draggable="false" height="20px" width="20px"> General:</h2>
+                    <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_general.png" draggable="false" height="20px" width="20px"> General:</h2>
                     <div class="cleanSection">
                         <select name="selectCategory" id="categoryClean">
                             <option value="softwareComponents">Softwares to upgrade</option>
@@ -71,21 +71,21 @@
                     </div>
                     <br> 
                     <div class="cleanSection">
-                        <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." style="width: 50%;">
+                        <input id="nameCompany" type="text" required placeholder="Insert the new name of the Company..." style="width: 50%;" spellcheck="false">
                         <button id="changeNameBtn" class="cleanSectionBtn">Change the name</button>
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
                     <label for="checkbox" style="font-size: 20px;">Disable Auto-Close settings and informations panel.</label>
                     <br> <br> <br>
-                    <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_actions.png" alt="" draggable="false" height="20px" width="20px"> Actions:</h2>
-                    <button id="resetBtn" class="btn"><img src="assets/_delete.png" alt="" draggable="false" width="25px" height="25px">  Reset all datas</button>
+                    <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
+                    <button id="resetBtn" class="btn"><img src="assets/_delete.png" draggable="false" width="25px" height="25px">  Reset all datas</button>
                     <br> <br>
-                    <button id="restartBtn" class="btn"><img src="assets/_reload.png" alt="" draggable="false" width="23px" height="23px">  Restart the app</button>
+                    <button id="restartBtn" class="btn"><img src="assets/_reload.png" draggable="false" width="23px" height="23px">  Restart the app</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton"><img src="assets/_quit.png" alt="" draggable="false" height="25px" width="25px"> Quit the app</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton"><img src="assets/_quit.png" draggable="false" height="25px" width="25px"> Quit the app</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton"><img src="assets/_close.png" alt="" draggable="false" height="15px" width="15px"> Close</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton"><img src="assets/_close.png" draggable="false" height="15px" width="15px"> Close settings</button>
                 </div>
             </div>
         </div>
